default/objects/Trigger_Settings__c/Trigger_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings related to apex triggers</description>
    <label>Trigger Settings</label>
</CustomObject>