default/objects/Trigger_Settings__c/fields/Enable_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>should Apex triggers with logging enabled write logs to the Trigger_Execution_Log__c object?</description>
    <inlineHelpText>should Apex triggers with logging enabled write logs to the Trigger_Execution_Log__c object?</inlineHelpText>
    <label>Enable Logging</label>
    <type>Checkbox</type>
</CustomField>