default/objects/Trigger_Settings__c/fields/Log_TTL_Days__c.field-meta.xml
<CustomField>
    <fullName>Log_TTL_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <description>The number of days old a log can be before being purged by the batch job</description>
    <inlineHelpText>The number of days old a log can be before being purged by the batch job</inlineHelpText>
    <label>Log TTL Days</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>