default/objects/Trigger_Settings__c/fields/Use_Platform_Event_Based_Logging__c.field-meta.xml
<CustomField>
    <fullName>Use_Platform_Event_Based_Logging__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Should the logs be created via platform events (true) or directly inserted (false)</description>
    <inlineHelpText>Should the logs be created via platform events (true) or directly inserted (false)</inlineHelpText>
    <label>Use Platform Event Based Logging</label>
    <type>Checkbox</type>
</CustomField>